added an option for resellers to set logo
